@@ -197,6 +197,7 @@ e3e7e20b1e0e5d5d68df4cd4caa1e1a7410d46b6  polyml-5.7.1-7.tar.gz
 1430533c09b17f8be73798a47a5f409d43a04cf4  polyml-5.7.1-8.tar.gz
 171b5783b88522a35e4822b19ef8ba838c04f494  polyml-5.7.1.tar.gz
 5fbcab1da2b5eb97f24da2590ece189d55b3a105  polyml-5.7.tar.gz
+51e024225b460900da5279f0b91b217085f98cf9  polyml-5.8-20190220.tar.gz
 49f1adfacdd6d29fa9f72035d94a31eaac411a97  polyml-test-0a6ebca445fc.tar.gz
 2a8c4421e0a03c0d6ad556b3c36c34eb11568adb  polyml-test-1236652ebd55.tar.gz
 a0064c157a59e2706e18512a49a6dca914fa17fc  polyml-test-1b2dcf8f5202.tar.gz
