@@ -3,7 +3,7 @@ Poly/ML for Isabelle
 
 This compilation of Poly/ML (https://www.polyml.org) is based on the
 repository version
-https://github.com/polyml/polyml/commit/8fda4fd22441 (master).
+https://github.com/polyml/polyml/commit/c3a630fcc6a6 (master).
 
 The Isabelle repository provides the administrative tool
 "build_polyml", which can be used in the polyml component directory as
@@ -48,4 +48,4 @@ will be placed in /usr/local).
 
 
         Makarius
-        17-Feb-2019
+        20-Feb-2019
